--- a/.github/workflows/sanity_test.yml
+++ b/.github/workflows/sanity_test.yml
@@ -29,7 +29,7 @@ jobs:
                 BASE_URL: ${{ secrets.BASE_URL}}
                 LOGIN_USER: ${{ secrets.LOGIN_USER}}
                 LOGIN_PASS: ${{ secrets.LOGIN_PASS}}
-              run: npx playwright test tests/sanity.spec.ts
+              run: npx playwright test 
 
             - uses: actions/upload-artifact@v4
               if: always()
