User Profile & Role Validation Suite

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 LOGIN_USER=ashutoshfase1028@gmail.com
 LOGIN_PASS=test@1234
 BASE_URL=https://newmamtamobiles-eight.vercel.app/
+
+NORMAL_USER=testuser@example.com
+NORMAL_PASS=Test@1234
+NORMAL_NAME=Test User
